fixtures/solidity/translated_semantic_tests/errors/revert_conversion/revert_conversion.sol
error E(string a, uint[] b);
contract C {
    uint[] x;
    function f() public {
        x.push(7);
        revert E("abc", x);
    }
}